fixed text-wrap bug

--- a/frontend/components/Pantry/Pantry.module.scss
+++ b/frontend/components/Pantry/Pantry.module.scss
@@ -27,7 +27,7 @@
 .pantry {
   overflow-y: scroll;
 
-  width: 22rem;
+  width: calc(max(22rem, 40%));
   height: 75vh;
   background-color: white;
   box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.5);
